--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png"/>
 
-    <title>learn_languages</title>
+    <title>Learn Languages</title>
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
